--- a/.github/actions/compile-and-bundle/action.yml
+++ b/.github/actions/compile-and-bundle/action.yml
@@ -14,6 +14,10 @@ inputs:
   circuit-path:
     description: "The path to the Circom circuit file relative to the repository root."
     required: true
+  resources-path:
+    description: "The path to the CI resources directory relative to the repository root."
+    required: false
+    default: ".github/resources"
   version:
     description: "The version of the bundle. E.g.: v1.0.0."
     required: true
@@ -34,13 +38,13 @@ runs:
         CIRCUIT_PATH: ${{ inputs.circuit-path }}
         BUNDLE_TRIPLET: ${{ inputs.version }}-${{ inputs.os }}-${{ inputs.arch }}
         CIRCUIT_NAME_BINARY: ${{ inputs.circuit-name-binary }}
+        RESOURCES_PATH: ${{ inputs.resources-path }}
         OS: ${{ inputs.os }}
       run: |
         CIRCUIT_DIRECTORY="$(dirname ${CIRCUIT_PATH})"
         CIRCUIT_FILENAME="$(basename ${CIRCUIT_PATH})"
         CIRCUIT_FILESTEM="${CIRCUIT_FILENAME%.circom}"
         CIRCUIT_CPP_DIRNAME="${CIRCUIT_FILESTEM}_cpp"
-        RESOURCES_PATH="${REPOSITORY_ROOT_PATH}/.github/resources"
         
         platform_binary_name="${CIRCUIT_NAME_BINARY}"
         if [ "${OS}" = "windows" ]; then
@@ -79,7 +83,7 @@ runs:
       if: ${{ inputs.os == 'macos' }}
       env:
         WITNESS_GENERATOR_RESOURCES_PATH: ${{ steps.parse-circuit-path.outputs.WITNESS_GENERATOR_RESOURCES_PATH }}
-        CIRCUIT_CPP_PATH: ${{ steps.parse-circuit-path.outputs.CIRCUIT }}
+        CIRCUIT_CPP_PATH: ${{ steps.parse-circuit-path.outputs.CIRCUIT_CPP_PATH }}
         OS: ${{ inputs.os }}
       run: cp "${WITNESS_GENERATOR_RESOURCES_PATH}/${{ env.OS }}.gmp_patch.hpp" "${CIRCUIT_CPP_PATH}/gmp_patch.hpp"
 
