--- a/.github/workflows/build-circuits.yml
+++ b/.github/workflows/build-circuits.yml
@@ -479,7 +479,7 @@ jobs:
           - os: linux
             arch: x86_64
           - os: macos
-            arch: arm64
+            arch: aarch64
           - os: windows
             arch: x86_64
         artifact:
@@ -506,4 +506,3 @@ jobs:
           asset_path: ${{ env.ARTIFACT_NAME }}
           asset_name: ${{ env.ARTIFACT_NAME }}
           asset_content_type: application/octet-stream
-
