Remove testing stuff.

--- a/.github/workflows/build-circuits.yml
+++ b/.github/workflows/build-circuits.yml
@@ -4,7 +4,6 @@ on:
   push:
     tags:
       - "circom_circuits-v*.*.*"
-  pull_request:
   workflow_dispatch:
     inputs:
       tag:
@@ -24,8 +23,7 @@ jobs:
         env:
           # Use the tag name if it is available, otherwise use the input version.
           # If neither is available, default to the commit hash.
-          # TAG: ${{ (github.ref_type == 'tag' && github.ref_name) || inputs.tag || '' }}
-          TAG: ${{ (github.ref_type == 'tag' && github.ref_name) || inputs.tag || 'circom_circuits-v0.0.0' }}
+          TAG: ${{ (github.ref_type == 'tag' && github.ref_name) || inputs.tag || '' }}
         run: |
           if [ -z "$TAG" ]; then
             echo "Could not determine tag."
